# redpile-old

./: .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  Makefile  README.md  build.sh  test.sh
conf/: gameoflife.lua  redstone.lua
data/: 1000line.txt  1000x1000grid.txt  100x100grid.txt  generator.rb
docs/: blocks.md  commands.md  configuration.md  generate.rb  getting-started.md  implementation.md  index.md  intro.md  messages.md  notes.md  redpile.tex  rup.md  types.md
docs/commands/: get.md  ping.md  set.md  status.md  tick.md
scripts/: glider.txt  grid.sh  torch.txt
spec/: command_spec.rb  comparator_spec.rb  echo_spec.rb  gate_spec.rb  instruction_spec.rb  main_spec.rb  options_spec.rb  piston_spec.rb  repeater_spec.rb  spec_helper.rb  switch_spec.rb  torch_spec.rb  wire_spec.rb  world_spec.rb
spec/commands/: command_spec.rb  field_spec.rb  message_spec.rb  messages_spec.rb  node_spec.rb  plot_spec.rb  status_spec.rb  tick_spec.rb  type_spec.rb  types_spec.rb
spec/support/: ffi_monkeypatch.rb  redpile.rb
spec/types/: comparator_spec.rb  echo_spec.rb  piston_spec.rb  repeater_spec.rb  switch_spec.rb  torch_spec.rb  wire_spec.rb
src/: CMakeLists.txt  bench.c  bench.h  block.c  block.h  bucket.c  bucket.h  command.c  command.h  common.h  common.rs  hashmap.c  hashmap.h  input.c  input.h  instruction.c  instruction.h  io.c  io.h  lexer.l  location.c  location.h  logic.c  logic.h  main.c  message.c  message.h  node.c  node.h  parser.y  queue.c  queue.h  redpile.c  redpile.h  redpile.rs  redstone.c  redstone.h  repl.c  repl.h  rup.c  (+10 more)
src/command/: .gitignore  command.c  command.h  lexer.l  parser.y
test/: bench.c  cmdgen.rb  commands.txt  common.h  minunit.h  tests.c
