CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(redpile)

FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
ADD_DEFINITIONS(-std=gnu99 -Wall)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/src)
BISON_TARGET(CommandParser src/parser.y ${CMAKE_CURRENT_BINARY_DIR}/src/parser.c)
FLEX_TARGET(CommandScanner src/lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/src/lexer.c)
ADD_FLEX_BISON_DEPENDENCY(CommandScanner CommandParser)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(deps/linenoise)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/src)

FILE(GLOB_RECURSE SOURCE_FILES src/*.c deps/linenoise/linenoise.c)
ADD_EXECUTABLE(redpile ${SOURCE_FILES} ${FLEX_CommandScanner_OUTPUTS} ${BISON_CommandParser_OUTPUTS})

